5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1664_2970.log
== TEST (2019-04-16 10:30:51) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t))
if(i <= 0.01)
	print(round(real, 5))
-- ERROR:
File "XXXX", line 5
    if(i <= 0.01)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:04) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t))
if(i <= 0.01):
	print(round(real, 5))
-- ERROR:
File "XXXX", line 5
    if(i <= 0.01)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:59) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t))
if(i <= 0.01):
	print(round(real, 5))
else:
	print(round(irreal, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(irreal, 5))
NameError: name 'irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:40) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t))
if(i <= 0.01):
	print(round(real, 5))
else:
	(i> 0.01)
	print(round(irreal, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(irreal, 5))
NameError: name 'irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:54) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t))
if(i <= 0.01):
	print(round(real, 5))
else:
	(i > 0.01)
	print(round(irreal, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(irreal, 5))
NameError: name 'irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:32:56) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t))
if(i <= 0.01):
	print(round(real, 5))
else:
	(i > 0.01)
	print(round(irreal, 5))
-- EXECUTION TIME:
0.158615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2970/main.py", line 9, in <module>
    print(round(irreal, 5))
NameError: name 'irreal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:33:16) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print(round(real, 5))
else:
	(i > 0.01)
	print(round(irreal, 5))
-- EXECUTION TIME:
0.122137
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2970/main.py", line 9, in <module>
    print(round(irreal, 5))
NameError: name 'irreal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:01) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print(round(real, 5))
else:
	(i > 0.01)
	print(round(irreal, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(irreal, 5))
NameError: name 'irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:34:23) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print(round("real", 5))
else:
	(i > 0.01)
	print(round("irreal", 5))
-- EXECUTION TIME:
0.139152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2970/main.py", line 9, in <module>
    print(round("irreal", 5))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:25) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print(round("real", 5))
else:
	(i > 0.01)
	print(round("irreal", 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round("irreal", 5))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:36) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print(round("real", 5))
else:
	(i > 0.01)
	print(round("irreal", 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round("irreal", 5))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:22) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print(round("real", 5))
else:
	print(round("irreal", 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("irreal", 5))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:39) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print(round("real"))
else:
	print(round("irreal"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("irreal"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:36:01) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:36:07) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- EXECUTION TIME:
0.194546
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:36:45) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:36:53) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- EXECUTION TIME:
0.183847
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:15) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
0.05572
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:34) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500*(t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
457089.66667
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:39:42) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000/1500**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:40:28) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000.00/1500.00**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- EXECUTION TIME:
0.140561
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.00234
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.52281
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.32123
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:29) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( 1042000.00/1500.00**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:19) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ( Qf/Qo**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:44) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ((Qf/Qo)**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:43:52) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ((Qf/Qo)**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- EXECUTION TIME:
0.137472
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:00) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ((Qf/Qo)**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("real")
else:
	print("irreal")
-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:44:26) 
-- CODE:
t = float(input("qual o periodo de tempo: "))
Qf = (1042000)
Qo = (1500)
i = ((Qf/Qo)**(1/t)) - 1
print(round(i ,5))
if(i <= 0.01):
	print("Real")
else:
	print("Irreal")
-- EXECUTION TIME:
0.172382
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
Irreal
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
